LU-106 unable to handle kernel pagig request in lprocfs_stats_collect()

In several places in memory struct may be released before proc entry
for mds/mgs/obdfilter.

Signed-off-by: Lai Siyao <laisiyao@whamcloud.com>
Change-Id: Ief0e5d75eb3ca10ea08dfbed7f5a94ad4b2122d5