lustre/obdclass/lprocfs_status.c
@@ -499,9 +499,13 @@ int lprocfs_rd_blksize(char *page, char **start, off_t off, int count,
                        int *eof, void *data)
 {
         struct obd_statfs osfs;
-        int rc = obd_statfs(data, &osfs,
-                            cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
-                            OBD_STATFS_NODELAY);
+        int rc;
+
+        OBD_CHECK_DEV_ACTIVE((struct obd_device *)data);
+
+        rc = obd_statfs(data, &osfs,
+                        cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
+                        OBD_STATFS_NODELAY);
         if (!rc) {
                 *eof = 1;
                 rc = snprintf(page, count, "%u\n", osfs.os_bsize);
@@ -513,9 +517,13 @@ int lprocfs_rd_kbytestotal(char *page, char **start, off_t off, int count,
                            int *eof, void *data)
 {
         struct obd_statfs osfs;
-        int rc = obd_statfs(data, &osfs,
-                            cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
-                            OBD_STATFS_NODELAY);
+        int rc;
+
+        OBD_CHECK_DEV_ACTIVE((struct obd_device *)data);
+
+        rc = obd_statfs(data, &osfs,
+                        cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
+                        OBD_STATFS_NODELAY);
         if (!rc) {
                 __u32 blk_size = osfs.os_bsize >> 10;
                 __u64 result = osfs.os_blocks;
@@ -533,9 +541,13 @@ int lprocfs_rd_kbytesfree(char *page, char **start, off_t off, int count,
                           int *eof, void *data)
 {
         struct obd_statfs osfs;
-        int rc = obd_statfs(data, &osfs,
-                            cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
-                            OBD_STATFS_NODELAY);
+        int rc;
+
+        OBD_CHECK_DEV_ACTIVE((struct obd_device *)data);
+
+        rc = obd_statfs(data, &osfs,
+                        cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
+                        OBD_STATFS_NODELAY);
         if (!rc) {
                 __u32 blk_size = osfs.os_bsize >> 10;
                 __u64 result = osfs.os_bfree;
@@ -553,9 +565,13 @@ int lprocfs_rd_kbytesavail(char *page, char **start, off_t off, int count,
                            int *eof, void *data)
 {
         struct obd_statfs osfs;
-        int rc = obd_statfs(data, &osfs,
-                            cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
-                            OBD_STATFS_NODELAY);
+        int rc;
+
+        OBD_CHECK_DEV_ACTIVE((struct obd_device *)data);
+
+        rc = obd_statfs(data, &osfs,
+                        cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
+                        OBD_STATFS_NODELAY);
         if (!rc) {
                 __u32 blk_size = osfs.os_bsize >> 10;
                 __u64 result = osfs.os_bavail;
@@ -573,9 +589,13 @@ int lprocfs_rd_filestotal(char *page, char **start, off_t off, int count,
                           int *eof, void *data)
 {
         struct obd_statfs osfs;
-        int rc = obd_statfs(data, &osfs,
-                            cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
-                            OBD_STATFS_NODELAY);
+        int rc;
+
+        OBD_CHECK_DEV_ACTIVE((struct obd_device *)data);
+
+        rc = obd_statfs(data, &osfs,
+                        cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
+                        OBD_STATFS_NODELAY);
         if (!rc) {
                 *eof = 1;
                 rc = snprintf(page, count, LPU64"\n", osfs.os_files);
@@ -588,9 +608,13 @@ int lprocfs_rd_filesfree(char *page, char **start, off_t off, int count,
                          int *eof, void *data)
 {
         struct obd_statfs osfs;
-        int rc = obd_statfs(data, &osfs,
-                            cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
-                            OBD_STATFS_NODELAY);
+        int rc;
+
+        OBD_CHECK_DEV_ACTIVE((struct obd_device *)data);
+
+        rc = obd_statfs(data, &osfs,
+                        cfs_time_shift_64(-OBD_STATFS_CACHE_SECONDS),
+                        OBD_STATFS_NODELAY);
         if (!rc) {
                 *eof = 1;
                 rc = snprintf(page, count, LPU64"\n", osfs.os_ffree);
@@ -1568,12 +1592,22 @@ int lprocfs_exp_rd_uuid(char *page, char **start, off_t off, int count,
         struct obd_device *obd = stats->nid_obd;
         int len = 0;
 
+        spin_lock(&obd->obd_dev_lock);
+        if (!OBD_DEV_IS_ACTIVE(obd)) {
+                spin_unlock(&obd->obd_dev_lock);
+                CDEBUG(D_CONSOLE, "OBD %s already stopping\n", obd->obd_name);
+                return -ENODEV;
+        }
+
         *eof = 1;
         page[0] = '\0';
         lprocfs_exp_rd_cb_data_init(&cb_data, page, count, eof, &len);
         lustre_hash_for_each_key(obd->obd_nid_hash, &stats->nid,
                                  lprocfs_exp_print_uuid, &cb_data);
-        return (*cb_data.len);
+        len = *cb_data.len;
+        spin_unlock(&obd->obd_dev_lock);
+
+        return len;
 }
 
 void lprocfs_exp_print_hash(void *obj, void *cb_data)
@@ -1602,12 +1636,22 @@ int lprocfs_exp_rd_hash(char *page, char **start, off_t off, int count,
         struct obd_device *obd = stats->nid_obd;
         int len = 0;
 
+        spin_lock(&obd->obd_dev_lock);
+        if (!OBD_DEV_IS_ACTIVE(obd)) {
+                spin_unlock(&obd->obd_dev_lock);
+                CDEBUG(D_CONSOLE, "OBD %s already stopping\n", obd->obd_name);
+                return -ENODEV;
+        }
+
         *eof = 1;
         page[0] = '\0';
         lprocfs_exp_rd_cb_data_init(&cb_data, page, count, eof, &len);
         lustre_hash_for_each_key(obd->obd_nid_hash, &stats->nid,
                                  lprocfs_exp_print_hash, &cb_data);
-        return (*cb_data.len);
+        len = *cb_data.len;
+        spin_unlock(&obd->obd_dev_lock);
+
+        return len;
 }
 
 int lprocfs_nid_stats_clear_read(char *page, char **start, off_t off,
@@ -1652,6 +1696,13 @@ int lprocfs_nid_stats_clear_write(struct file *file, const char *buffer,
         struct nid_stat *client_stat;
         CFS_LIST_HEAD(free_list);
 
+        spin_lock(&obd->obd_dev_lock);
+        if (!OBD_DEV_IS_ACTIVE(obd)) {
+                spin_unlock(&obd->obd_dev_lock);
+                CDEBUG(D_CONSOLE, "OBD %s already stopping\n", obd->obd_name);
+                return -ENODEV;
+        }
+
         lustre_hash_cond_del(obd->obd_nid_stats_hash,
                              lprocfs_nid_stats_clear_write_cb, &free_list);
 
@@ -1661,6 +1712,7 @@ int lprocfs_nid_stats_clear_write(struct file *file, const char *buffer,
                 list_del_init(&client_stat->nid_list);
                 lprocfs_free_client_stats(client_stat);
         }
+        spin_unlock(&obd->obd_dev_lock);
 
         return count;
 }
@@ -2140,6 +2192,13 @@ int lprocfs_obd_rd_hash(char *page, char **start, off_t off,
         if (obd == NULL)
                 return 0;
 
+        spin_lock(&obd->obd_dev_lock);
+        if (!OBD_DEV_IS_ACTIVE(obd)) {
+                spin_unlock(&obd->obd_dev_lock);
+                CDEBUG(D_CONSOLE, "OBD %s already stopping\n", obd->obd_name);
+                return -ENODEV;
+        }
+
         c += lustre_hash_debug_header(page, count);
         c += lustre_hash_debug_str(obd->obd_uuid_hash, page + c, count - c);
         c += lustre_hash_debug_str(obd->obd_nid_hash, page + c, count - c);
@@ -2149,6 +2208,7 @@ int lprocfs_obd_rd_hash(char *page, char **start, off_t off,
                 c += lustre_hash_debug_str(obd->u.obt.obt_qctxt.lqc_lqs_hash,
                                            page + c, count - c);
 #endif
+        spin_unlock(&obd->obd_dev_lock);
 
         return c;
 }
